[gd_scene load_steps=24 format=3 uid="uid://dkwrosj64i8ur"]

[ext_resource type="Script" uid="uid://bf1gm1tl0pg8v" path="res://scripts/level_entities/torpedo.gd" id="1_uf70w"]
[ext_resource type="Texture2D" uid="uid://ejr6p7q5rwbx" path="res://assets/textures/TorpedoBlue.png" id="2_m13ix"]
[ext_resource type="Texture2D" uid="uid://ej5uxca8hxd3" path="res://assets/textures/ships/bullet_explosion.png" id="3_ncjgy"]
[ext_resource type="PackedScene" uid="uid://bax7dybiuk6w3" path="res://scenes/level_entities/damage_marker.tscn" id="4_8idko"]
[ext_resource type="AudioStream" uid="uid://ns0cjj8n37hn" path="res://assets/audio/smallexplosion3.ogg" id="5_3x835"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hsjqf"]
radius = 3.0
height = 32.0

[sub_resource type="AtlasTexture" id="AtlasTexture_sg8r3"]
atlas = ExtResource("3_ncjgy")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eovqh"]
atlas = ExtResource("3_ncjgy")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0h8p0"]
atlas = ExtResource("3_ncjgy")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v6rdo"]
atlas = ExtResource("3_ncjgy")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_exens"]
atlas = ExtResource("3_ncjgy")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eflog"]
atlas = ExtResource("3_ncjgy")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ono4y"]
atlas = ExtResource("3_ncjgy")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g8s0r"]
atlas = ExtResource("3_ncjgy")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k44db"]
atlas = ExtResource("3_ncjgy")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_chm21"]
atlas = ExtResource("3_ncjgy")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bsq26"]
atlas = ExtResource("3_ncjgy")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wphns"]
atlas = ExtResource("3_ncjgy")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8akrm"]
atlas = ExtResource("3_ncjgy")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_36e5r"]
atlas = ExtResource("3_ncjgy")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n6py5"]
atlas = ExtResource("3_ncjgy")
region = Rect2(384, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_drtlu"]
atlas = ExtResource("3_ncjgy")
region = Rect2(448, 128, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_sq830"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sg8r3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eovqh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0h8p0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v6rdo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_exens")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eflog")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ono4y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g8s0r")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"explode_hull",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k44db")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_chm21")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bsq26")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wphns")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8akrm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_36e5r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n6py5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_drtlu")
}],
"loop": false,
"name": &"explode_shield",
"speed": 20.0
}]

[node name="Torpedo" type="Area2D" groups=["projectile"]]
z_index = 1
collision_layer = 0
collision_mask = 0
script = ExtResource("1_uf70w")
damage_indicator = ExtResource("4_8idko")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -16)
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_m13ix")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -16)
shape = SubResource("CapsuleShape2D_hsjqf")

[node name="explosion_animation" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -30)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_sq830")
animation = &"explode_hull"

[node name="torpedo_hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_3x835")
volume_db = -20.0
pitch_scale = 2.0

[connection signal="area_entered" from="." to="." method="_on_torpedo_collision"]
[connection signal="animation_finished" from="explosion_animation" to="." method="_on_animation_finished"]
[connection signal="finished" from="torpedo_hit" to="." method="_on_torpedo_hit_finished"]
